fix: tabs uses overflow hidden

--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -67,7 +67,7 @@
     position:relative;
     background:#fff;
     height: 130%;
-    /* overflow:hidden; */
+    overflow:hidden;
     background-color: transparent;    
 }
 
